--- a/StarterProject80lv.uproject
+++ b/StarterProject80lv.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{61DFFA5E-4B6B-7332-9A33-88A5790BBAC4}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
